src/objects/Standard_Pay_Plan_Header__c.object
<CustomObject>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charges</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Project_Charges__c.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Project_Charges__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Charges__c</referenceTo>
        <relationshipLabel>Standard Pay Plan Headers</relationshipLabel>
        <relationshipName>Standard_Pay_Plan_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <formula>IF(NOT( ISBLANK( Charge_Code__r.Description__c ) ) , Charge_Code__r.Charge_Code1__c
+ &apos; - &apos; + Charge_Code__r.Description__c , Charge_Code__r.Charge_Code1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_To__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_from__c</fullName>
        <label>Effective from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pay_Plan_ID__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pay Plan ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Payment_Plan__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Payment_Plan__c.Tower__c</field>
                <operation>equals</operation>
                <valueField>$Source.Tower__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipLabel>Standard Pay Plan Headers</relationshipLabel>
        <relationshipName>Standard_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanCode_Unique__c</fullName>
        <label>PlanCode Unique</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <label>Plan Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Description__c</fullName>
        <label>Plan Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Standard Pay Plan Headers</relationshipLabel>
        <relationshipName>Standard_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Tower__c.ProjectName__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tower__c</referenceTo>
        <relationshipLabel>Standard Pay Plan Headers</relationshipLabel>
        <relationshipName>Standard_Pay_Plan_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Standard Pay Plan Header</label>
    <nameField>
        <label>Standard Pay Plan Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Pay Plan Headers</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Effective_from_not_Less_than_Project_S_D</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_from__c  &lt; Project__r.Start_Date__c</errorConditionFormula>
        <errorDisplayField>Effective_from__c</errorDisplayField>
        <errorMessage>Effective from cann&apos;t be less than Project Start Date</errorMessage>
    </validationRules>
</CustomObject>